--- a/EggTime/EggTime/Info.plist
+++ b/EggTime/EggTime/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>앱을 열때마다 위치주소 가져오기 허용</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>test2</string>
+	<key>NSCameraUsageDescription</key>
+	<string>test1</string>
 	<key>NMFCientId</key>
 	<string>sjtk98rxyn</string>
 	<key>UIApplicationSceneManifest</key>
