feat: 네이버 지도 marker및 camera 이동, popup(pageVC) 생성 fix: setting 관련 UI

--- a/EggTime/EggTime/Info.plist
+++ b/EggTime/EggTime/Info.plist
@@ -2,8 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string></string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string></string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>앱을 열때마다 위치주소 가져오기 허용</string>
+	<string>앱을 열때마다 위치주소 가져오기 허용, 네이버 지도에서 마커와 현위치를 표시하기위해 위치정보가 사용됩니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진 앨범 가져오게 해주세용</string>
 	<key>NSCameraUsageDescription</key>
