--- a/EggTime/EggTime/Info.plist
+++ b/EggTime/EggTime/Info.plist
@@ -9,9 +9,9 @@
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>사진 앨범 가져오게 해주세용</string>
+	<string>이미지 등록 및 사용을 위해 앨범 접근 권한을 허용해주세요.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>카메라 사용을 허용해주세용</string>
+	<string>이미지 등록 및 사용을 위해 카메라 접근 권한을 허용해주세요.</string>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
 	<key>NMFCientId</key>
