--- a/EggTime/EggTime/Info.plist
+++ b/EggTime/EggTime/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>내 위치 확인을 위해 권한이 필요합니다.</string>
+	<string>앱을 열때마다 위치주소 가져오기 허용, 네이버 지도에서 마커와 현위치를 표기하기위해 위치정보가 사용됩니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>내 위치 확인을 위해 권한이 필요합니다.</string>
+	<string>앱을 열때마다 위치주소 가져오기 허용, 네이버 지도에서 마커와 현위치를 표기하기위해 위치정보가 사용됩니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>이미지 등록 및 사용을 위해 앨범 접근 권한을 허용해주세요.</string>
 	<key>NSCameraUsageDescription</key>
