--- a/EggTime/EggTime/Surpport/Info.plist
+++ b/EggTime/EggTime/Surpport/Info.plist
@@ -6,7 +6,7 @@
 	<string>sjtk98rxyn</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>DalseoHealingMedium.otf</string>
+		<string>SUIT-Medium.otf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
